--- a/pages/global.css
+++ b/pages/global.css
@@ -167,7 +167,8 @@ template {
 .content {
   display: flex;
   flex-flow: row nowrap;
-  width: 100%;
+  width: 100vw;
+  max-width: 100%;
   justify-content: center;
   position: relative;
 }
